plasma-nm (0.9.3.3-1) UNRELEASED; urgency=medium

  * New upstream release.

 -- Maximiliano Curia <maxy@debian.org>  Mon, 03 Mar 2014 12:51:49 +0100

plasma-nm (0.9.3.2-3) unstable; urgency=medium

  * Update transitional package description. Thanks to Jonas Smedegaard.
    (Closes: #739045)
  * Add plasma-widget-networkmanagement-dbg transitional package.
    (Closes: #740326)

 -- Maximiliano Curia <maxy@debian.org>  Fri, 28 Feb 2014 23:51:09 +0100

plasma-nm (0.9.3.2-2) unstable; urgency=medium

  * Release to unstable.

 -- Maximiliano Curia <maxy@debian.org>  Fri, 14 Feb 2014 16:59:02 +0100

plasma-nm (0.9.3.2-1) experimental; urgency=low

  * Initial release. (Closes: #731375)

 -- Maximiliano Curia <maxy@debian.org>  Wed, 04 Dec 2013 21:18:56 +0100