@@ -2,7 +2,4 @@
 # -*- makefile -*-
 
 %:
-	dh $@ --parallel --with kde
-
-override_dh_strip:
-	dh_strip --dbg-package=plasma-nm-dbg
+	dh $@ --parallel --with kde --dbg-package=plasma-nm-dbg
